--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,4 +12,5 @@
     <color name="blue_3">#00194d</color>
     <color name="danger">#cf000f</color>
     <color name="grey">#BC8E8E8E</color>
+    <color name="light_grey">#BCEAEAEA</color>
 </resources>
